# MyChic

./: .gitignore  README.md  pyproject.toml
django_back/: settings.py  urls.py
django_back/design_service/: apps.py
django_back/django_back/: settings.py  urls.py
streamlit_front/: api.py  main.py
